# cmtg

./: .gitignore  LICENSE  Makefile  README.md  dev.env  dev.md  gen_ansi_clr.py  pyproject.toml
src/cmtg/: __init__.py  __main__.py  cmtg.py
src/cmtg/resources/: eclipse_terminal.clr  flat.clr  mirc.clr  pal.bash  pal.sh  powershell6.clr  putty.clr  simple.sublime-color-scheme  terminal_app.clr  vga.clr  vscode.clr  windows_10_console.clr  windows_xp_console.clr  xterm.Xresources  xterm.clr
