[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmtg"
version = "1.0.1"
authors = [
  { name="Casey Fitzpatrick", email="kcghost@gmail.com" },
]
description = "A utility for generating matching color themes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
	"networkx",
	"scipy",
	"numpy",
	"colormath",
]

[project.urls]
"Homepage" = "https://github.com/kcghost/cmtg"
"Bug Tracker" = "https://github.com/kcghost/cmtg/issues"

[project.scripts]
cmtg = "cmtg:main"
